helm/jenkins/ingress-gce-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    app.kubernetes.io/instance: cd-jenkins
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "jenkins-static-ip" #gcloud compute addresses create jenkins-static-ip --global
spec:
  rules:
    - host: jenkins.dokify.net
      http:
        paths:
          - path: "/*"
            backend:
              serviceName: cd-jenkins
              servicePort: 8080
