helm/jenkins/ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    app.kubernetes.io/instance: cd-jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-jenkins-dokify
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
    - host: jenkins.dokify.net
      http:
        paths:
          - path: "/"
            backend:
              serviceName: cd-jenkins
              servicePort: 8080
